force-app/main/default/objects/ClientLead__c/ClientLead__c.object-meta.xml
<CustomObject>
    <label>Client Lead</label>
    <nameField>
        <label>Potential Client Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client_Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>