force-app/main/default/objects/ClientLead__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client_Leads (Account)</relationshipLabel>
    <relationshipName>Client_Leads2</relationshipName>
    <type>Lookup</type>
</CustomField>