force-app/main/default/objects/ClientLead__c/fields/BusinessDivision__c.field-meta.xml
<CustomField>
    <fullName>BusinessDivision__c</fullName>
    <label>Business Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pipes</fullName>
                <label>Pipe Products</label>
            </value>
            <value>
                <fullName>Railway</fullName>
                <label>Railway Products</label>
            </value>
            <value>
                <fullName>Steel</fullName>
                <label>Steel Products</label>
            </value>
            <value>
                <fullName>PRD</fullName>
                <label>Product &amp; Resource Dept.</label>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
                <label>IT Department</label>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>TOP</fullName>
                <label>Top Management</label>
            </value>
            <value>
                <fullName>DVM</fullName>
                <label>Recycled Scrap</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>