force-app/main/default/objects/ClientLead__c/fields/ChildAccount__c.field-meta.xml
<CustomField>
    <fullName>ChildAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client_Leads</relationshipLabel>
    <relationshipName>Client_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>