force-app/main/default/objects/ClientLead__c/fields/CityName__c.field-meta.xml
<CustomField>
    <fullName>CityName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>City Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>WorldCities__c.Country__c</field>
            <operation>equals</operation>
            <valueField>$Source.Country__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>WorldCities__c</referenceTo>
    <relationshipLabel>Client Leads</relationshipLabel>
    <relationshipName>Client_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>