force-app/main/default/objects/ClientLead__c/fields/CityOnTheMap__c.field-meta.xml
<CustomField>
    <fullName>CityOnTheMap__c</fullName>
    <formula>&apos;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City on the Map</label>
    <type>Text</type>
</CustomField>