force-app/main/default/objects/ClientLead__c/fields/CityProvince__c.field-meta.xml
<CustomField>
    <fullName>CityProvince__c</fullName>
    <formula>&apos;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City Province</label>
    <type>Text</type>
</CustomField>