force-app/main/default/objects/ClientLead__c/fields/Duplicates__c.field-meta.xml
<CustomField>
    <fullName>Duplicates__c</fullName>
    <label>Duplicates</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>