force-app/main/default/objects/ClientLead__c/fields/Email_Is_Invalid__c.field-meta.xml
<CustomField>
    <fullName>Email_Is_Invalid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Is Invalid</label>
    <type>Checkbox</type>
</CustomField>