force-app/main/default/objects/ClientLead__c/fields/Holding__c.field-meta.xml
<CustomField>
    <fullName>Holding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Holding</label>
    <referenceTo>HoldingGroups__c</referenceTo>
    <relationshipLabel>Client_Leads</relationshipLabel>
    <relationshipName>Client_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>