force-app/main/default/objects/ClientLead__c/fields/LeadStage__c.field-meta.xml
<CustomField>
    <fullName>LeadStage__c</fullName>
    <label>Lead Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contacted</fullName>
                <default>true</default>
                <label>Contacted</label>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Quoted</fullName>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Converted</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>