force-app/main/default/objects/ClientLead__c/fields/MetaphoneAlternate__c.field-meta.xml
<CustomField>
    <fullName>MetaphoneAlternate__c</fullName>
    <label>MetaphoneAlternate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>