force-app/main/default/objects/ClientLead__c/fields/MetaphonePrimary__c.field-meta.xml
<CustomField>
    <fullName>MetaphonePrimary__c</fullName>
    <label>MetaphonePrimary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>