force-app/main/default/objects/ClientLead__c/fields/NormalizedName__c.field-meta.xml
<CustomField>
    <fullName>NormalizedName__c</fullName>
    <label>NormalizedName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>