force-app/main/default/objects/ClientLead__c/fields/NYSIIS__c.field-meta.xml
<CustomField>
    <fullName>NYSIIS__c</fullName>
    <label>NYSIIS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>