force-app/main/default/objects/ClientLead__c/fields/NYSIISFirstCode__c.field-meta.xml
<CustomField>
    <fullName>NYSIISFirstCode__c</fullName>
    <label>NYSIISFirstCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>