force-app/main/default/objects/ClientLead__c/fields/ParentAccount__c.field-meta.xml
<CustomField>
    <fullName>ParentAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client_Leads (Parent Account)</relationshipLabel>
    <relationshipName>Client_Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>