force-app/main/default/objects/ClientLead__c/fields/PhoneticCode__c.field-meta.xml
<CustomField>
    <fullName>PhoneticCode__c</fullName>
    <label>PhoneticCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>