force-app/main/default/objects/ClientLead__c/fields/SalesSegm__c.field-meta.xml
<CustomField>
    <fullName>SalesSegm__c</fullName>
    <label>Sales Segmentation</label>
    <type>TextArea</type>
</CustomField>