force-app/main/default/objects/ClientLead__c/fields/SoundexAllWords__c.field-meta.xml
<CustomField>
    <fullName>SoundexAllWords__c</fullName>
    <label>SoundexAllWords</label>
    <length>255</length>
    <type>Text</type>
</CustomField>