force-app/main/default/objects/ClientLead__c/fields/SoundexFirst3Letters__c.field-meta.xml
<CustomField>
    <fullName>SoundexFirst3Letters__c</fullName>
    <label>SoundexFirst3Letters</label>
    <length>10</length>
    <type>Text</type>
</CustomField>