force-app/main/default/objects/ClientLead__c/fields/SoundexFirstWord__c.field-meta.xml
<CustomField>
    <fullName>SoundexFirstWord__c</fullName>
    <label>SoundexFirstWord</label>
    <length>10</length>
    <type>Text</type>
</CustomField>